Implement more v3 endpoints
