# repmanv3/repmanv3.swagger.json
@@ -62,7 +62,9 @@
               "SYSBENCH",
               "WAITDATABASES",
               "REPLICATION_BOOTSTRAP",
-              "REPLICATION_CLEANUP"
+              "REPLICATION_CLEANUP",
+              "PROVISION",
+              "UNPROVISION"
             ]
           },
           {
@@ -158,7 +160,7 @@
     },
     "/v3/clusters/{cluster.name}/actions/switchover": {
       "post": {
-        "operationId": "ClusterService_PerformClusterAction7",
+        "operationId": "ClusterService_PerformClusterAction8",
         "responses": {
           "200": {
             "description": "A successful response.",
@@ -219,7 +221,9 @@
               "SYSBENCH",
               "WAITDATABASES",
               "REPLICATION_BOOTSTRAP",
-              "REPLICATION_CLEANUP"
+              "REPLICATION_CLEANUP",
+              "PROVISION",
+              "UNPROVISION"
             ],
             "default": "ACTION_UNSPECIFIED"
           },
@@ -295,7 +299,9 @@
               "SYSBENCH",
               "WAITDATABASES",
               "REPLICATION_BOOTSTRAP",
-              "REPLICATION_CLEANUP"
+              "REPLICATION_CLEANUP",
+              "PROVISION",
+              "UNPROVISION"
             ]
           },
           {
@@ -432,7 +438,9 @@
               "SYSBENCH",
               "WAITDATABASES",
               "REPLICATION_BOOTSTRAP",
-              "REPLICATION_CLEANUP"
+              "REPLICATION_CLEANUP",
+              "PROVISION",
+              "UNPROVISION"
             ]
           },
           {
@@ -569,7 +577,9 @@
               "SYSBENCH",
               "WAITDATABASES",
               "REPLICATION_BOOTSTRAP",
-              "REPLICATION_CLEANUP"
+              "REPLICATION_CLEANUP",
+              "PROVISION",
+              "UNPROVISION"
             ]
           },
           {
@@ -706,7 +716,9 @@
               "SYSBENCH",
               "WAITDATABASES",
               "REPLICATION_BOOTSTRAP",
-              "REPLICATION_CLEANUP"
+              "REPLICATION_CLEANUP",
+              "PROVISION",
+              "UNPROVISION"
             ]
           },
           {
@@ -842,7 +854,9 @@
               "SYSBENCH",
               "WAITDATABASES",
               "REPLICATION_BOOTSTRAP",
-              "REPLICATION_CLEANUP"
+              "REPLICATION_CLEANUP",
+              "PROVISION",
+              "UNPROVISION"
             ]
           },
           {
@@ -922,6 +936,503 @@
               "SPHINX"
             ],
             "default": "PROXY_UNSPECIFIED"
+          }
+        ],
+        "tags": [
+          "ClusterService"
+        ]
+      }
+    },
+    "/v3/clusters/{cluster.name}/schema/{table.tableSchema}/{table.tableName}/actions/RESHARD_TABLE/{clusterList}": {
+      "get": {
+        "operationId": "ClusterService_ExecuteTableAction3",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "properties": {}
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "cluster.name",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "table.tableSchema",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "table.tableName",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "clusterList",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "cluster.clusterShardingName",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "table.engine",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "table.tableRows",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "int64"
+          },
+          {
+            "name": "table.dataLength",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "int64"
+          },
+          {
+            "name": "table.indexLength",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "int64"
+          },
+          {
+            "name": "table.tableCrc",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "uint64"
+          },
+          {
+            "name": "table.tableClusters",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "table.tableSync",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "action",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "enum": [
+              "ACTION_UNSPECIFIED",
+              "CHECKSUM_TABLE",
+              "MOVE_TABLE",
+              "RESHARD_TABLE",
+              "UNIVERSAL_TABLE"
+            ],
+            "default": "ACTION_UNSPECIFIED"
+          },
+          {
+            "name": "clusterShard",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "ClusterService"
+        ]
+      }
+    },
+    "/v3/clusters/{cluster.name}/schema/{table.tableSchema}/{table.tableName}/actions/{action}": {
+      "get": {
+        "operationId": "ClusterService_ExecuteTableAction",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "properties": {}
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "cluster.name",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "table.tableSchema",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "table.tableName",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "action",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "enum": [
+              "ACTION_UNSPECIFIED",
+              "CHECKSUM_TABLE",
+              "MOVE_TABLE",
+              "RESHARD_TABLE",
+              "UNIVERSAL_TABLE"
+            ]
+          },
+          {
+            "name": "cluster.clusterShardingName",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "table.engine",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "table.tableRows",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "int64"
+          },
+          {
+            "name": "table.dataLength",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "int64"
+          },
+          {
+            "name": "table.indexLength",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "int64"
+          },
+          {
+            "name": "table.tableCrc",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "uint64"
+          },
+          {
+            "name": "table.tableClusters",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "table.tableSync",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "clusterShard",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "clusterList",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "ClusterService"
+        ]
+      }
+    },
+    "/v3/clusters/{cluster.name}/schema/{table.tableSchema}/{table.tableName}/actions/{action}/{clusterShard}": {
+      "get": {
+        "operationId": "ClusterService_ExecuteTableAction2",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "properties": {}
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "cluster.name",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "table.tableSchema",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "table.tableName",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "action",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "enum": [
+              "ACTION_UNSPECIFIED",
+              "CHECKSUM_TABLE",
+              "MOVE_TABLE",
+              "RESHARD_TABLE",
+              "UNIVERSAL_TABLE"
+            ]
+          },
+          {
+            "name": "clusterShard",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "cluster.clusterShardingName",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "table.engine",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "table.tableRows",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "int64"
+          },
+          {
+            "name": "table.dataLength",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "int64"
+          },
+          {
+            "name": "table.indexLength",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "int64"
+          },
+          {
+            "name": "table.tableCrc",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "uint64"
+          },
+          {
+            "name": "table.tableClusters",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "table.tableSync",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "clusterList",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "ClusterService"
+        ]
+      }
+    },
+    "/v3/clusters/{cluster.name}/services/actions/{action}": {
+      "get": {
+        "operationId": "ClusterService_PerformClusterAction7",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "properties": {}
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "cluster.name",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "action",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "enum": [
+              "ACTION_UNSPECIFIED",
+              "ADD",
+              "ADDSERVER",
+              "CANCEL_ROLLING_REPROV",
+              "CANCEL_ROLLING_RESTART",
+              "CHECKSUM_ALL_TABLES",
+              "FAILOVER",
+              "MASTER_PHYSICAL_BACKUP",
+              "OPTIMIZE",
+              "RESET_FAILOVER_CONTROL",
+              "RESET_SLA",
+              "ROLLING",
+              "ROTATEKEYS",
+              "START_TRAFFIC",
+              "STOP_TRAFFIC",
+              "SWITCHOVER",
+              "SYSBENCH",
+              "WAITDATABASES",
+              "REPLICATION_BOOTSTRAP",
+              "REPLICATION_CLEANUP",
+              "PROVISION",
+              "UNPROVISION"
+            ]
+          },
+          {
+            "name": "cluster.clusterShardingName",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "server.host",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "server.port",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "uint64"
+          },
+          {
+            "name": "server.type",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "enum": [
+              "TYPE_UNSPECIFIED",
+              "DATABASE",
+              "PROXY"
+            ],
+            "default": "TYPE_UNSPECIFIED"
+          },
+          {
+            "name": "server.database",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "enum": [
+              "DATABASE_UNSPECIFIED",
+              "MARIADB",
+              "PERCONA",
+              "MYSQL",
+              "POSTGRESQL"
+            ],
+            "default": "DATABASE_UNSPECIFIED"
+          },
+          {
+            "name": "server.proxy",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "enum": [
+              "PROXY_UNSPECIFIED",
+              "MAXSCALE",
+              "PROXYSQL",
+              "SHARDPROXY",
+              "HAPROXY",
+              "MYPROXY",
+              "EXTPROXY",
+              "SPHINX"
+            ],
+            "default": "PROXY_UNSPECIFIED"
+          },
+          {
+            "name": "topology",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "enum": [
+              "RT_UNSPECIFIED",
+              "MASTER_SLAVE",
+              "MASTER_SLAVE_NO_GTID",
+              "MULTI_MASTER",
+              "MULTI_TIER_SLAVE",
+              "MAXSCALE_BINLOG",
+              "MULTI_MASTER_RING",
+              "MULTI_MASTER_WSREP"
+            ],
+            "default": "RT_UNSPECIFIED"
           }
         ],
         "tags": [
@@ -2525,7 +3036,9 @@
         "SYSBENCH",
         "WAITDATABASES",
         "REPLICATION_BOOTSTRAP",
-        "REPLICATION_CLEANUP"
+        "REPLICATION_CLEANUP",
+        "PROVISION",
+        "UNPROVISION"
       ],
       "default": "ACTION_UNSPECIFIED"
     },
@@ -2598,6 +3111,17 @@
           "type": "string"
         }
       }
+    },
+    "v3TableActionAction": {
+      "type": "string",
+      "enum": [
+        "ACTION_UNSPECIFIED",
+        "CHECKSUM_TABLE",
+        "MOVE_TABLE",
+        "RESHARD_TABLE",
+        "UNIVERSAL_TABLE"
+      ],
+      "default": "ACTION_UNSPECIFIED"
     },
     "v3Tag": {
       "type": "object",
